[package]
name = "token-layer-cli"
version = "0.1.2"
edition = "2021"
description = "Rust CLI for Token Layer actions and info endpoints"
license = "MIT"
default-run = "tokenlayer"

[[bin]]
name = "token-layer"
path = "src/main.rs"

[[bin]]
name = "tokenlayer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
dirs = "6.0"
ethers-signers = "2.0"
ethers-core = "2.0"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
